set card hieght and make the content scrollable

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,6 +66,12 @@ div.button, div.checker, div.radio, div.selector, div.uploader {
   background: #fbf6ef;
   border-radius: 10px;
   box-shadow: 0 1px 15px rgba(0,0,0,0.04), 0 1px 6px rgba(0,0,0,0.04);
+  height: 720px;
+}
+
+.card .todo-list {
+  max-height: 450px;
+  overflow-y: auto;
 }
 
 .task {
@@ -75,6 +81,7 @@ div.button, div.checker, div.radio, div.selector, div.uploader {
 .todo-item {
   display: flex;
   align-items: center;
+  height: 50px;
 }
 
 .task {
